--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactGoogleMaps",
+  "name": "ReactCalendar",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/AnithaGunasekaran/react-calendar",
